--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,8 +27,9 @@
           </div>
 
           <nav>
-            <a href="{{ site.baseurl }}/">/Reference</a>
+            <a href="{{ site.baseurl }}/">Reference</a>
             <a href="{{ site.baseurl }}/about">About</a>
+            <a href="{{ site.baseurl }}/background">Background</a>
           </nav>
         </header>
       </div>
