--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,9 +27,8 @@
           </div>
 
           <nav>
-            <a href="{{ site.baseurl }}/">Reference</a>
-            <a href="{{ site.baseurl }}/about">About</a>
-            <a href="{{ site.baseurl }}/background">Background</a>
+            <a href="{{ site.baseurl }}/">Campaign Reference</a>
+            <a href="{{ site.baseurl }}/background">World Background</a>
           </nav>
         </header>
       </div>
