--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,8 @@
           </div>
 
           <nav>
-            <a href="{{ site.baseurl }}/">Campaign Reference</a>
+            <a href="{{ site.baseurl }}/resources">Campaign Resources</a>
+            <a href="{{ site.baseurl }}/events">Significant Events</a>
             <a href="{{ site.baseurl }}/background">World Background</a>
           </nav>
         </header>
