--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,6 +27,7 @@
           </div>
 
           <nav>
+            <a href="{{ site.baseurl }}/index">Home</a>
             <a href="{{ site.baseurl }}/resources">Campaign Resources</a>
             <a href="{{ site.baseurl }}/events">Significant Events</a>
             <a href="{{ site.baseurl }}/background">World Background</a>
