--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,6 +44,7 @@
       <div class="container">
         <footer class="footer">
           {% include svg-icons.html %}
+           <a href="{{ site.baseurl }}/index">Home</a>
         </footer>
       </div>
     </div>
