--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,7 +44,7 @@
       <div class="container">
         <footer class="footer">
           {% include svg-icons.html %}
-           <a href="{{ site.baseurl }}/index">Home</a>
+           <a href="https://www.dndbeyond.com/campaigns/2409669">DnD Beyond Campaign</a>
         </footer>
       </div>
     </div>
