--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,6 +45,8 @@
         <footer class="footer">
           {% include svg-icons.html %}
            <a href="https://www.dndbeyond.com/campaigns/2409669">DnD Beyond Link</a>
+           </div>
+           </div>
            <a href="https://app.roll20.net/campaigns/details/13964508/adventures-into-the-nelluon-triangle">Roll20 Link</a>
         </footer>
       </div>
